Created user orders w/ endpoints & client logic
